@@ -6,6 +6,8 @@
 		Added support for the file:// protocol in WEB.conf
 		Protocols are matched before extensions in WEB.conf
 		Fixed "Can't assign requested address" bug after update to Java 1.6.0.45 on Mac OS X
+		Added installation instructions to the Linux distribution
+		Fixed incorrect server IP address when starting via UMS.exe or UMS.bat
 	External Components:
 		Updated Java Runtime Environment automatic downloader for Windows to 7u21, which:
 			Has lots of security fixes and improvements 
